--- a/Chinook/Pages/Home.razor
+++ b/Chinook/Pages/Home.razor
@@ -14,6 +14,9 @@
 }
 else
 {
+    <div class="text-center bg-blue-100">
+        <input @bind-value="SearchText" @bind-value:event="oninput" @onkeydown="OnSearch" placeholder="Type artist name and press Enter key to search" />
+    </div>
     <table class="table table-striped table-hover table-sm">
         <thead>
             <tr>
@@ -22,7 +25,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var artist in Artists)
+            @foreach (var artist in FilteredArtists)
             {
                 <tr>
                     <td><a href="Artist/@artist.ArtistId">@artist.Name</a></td>
@@ -35,12 +38,16 @@ else
 
 @code {
     private List<ArtistDto> Artists;
-   // [Inject] IDbContextFactory<ChinookContext> DbFactory { get; set; }
+    private List<ArtistDto> FilteredArtists;
+    // [Inject] IDbContextFactory<ChinookContext> DbFactory { get; set; }
     [Inject] IArtistService artistService { get; set; }
+
+    public string SearchText = String.Empty;
 
     protected override async Task OnInitializedAsync() {
         await InvokeAsync(StateHasChanged);
         Artists = await GetArtists();
+        FilteredArtists = GetFilterredArtists();
     }
 
     public async Task<List<ArtistDto>> GetArtists()
@@ -50,8 +57,28 @@ else
 
         //  return dbContext.Artists.ToList();
 
-        return await artistService.GetAllArtists(); 
+        return await artistService.GetAllArtists();
     }
+
+    public List<ArtistDto> GetFilterredArtists()
+    {
+        if(!String.IsNullOrEmpty(SearchText))
+        {
+            return Artists.Where(a => a.Name!.ToLower().Contains(SearchText.ToLower())).Select(a => a).ToList();
+        }
+        return Artists;
+    }
+
+    public void OnSearch(KeyboardEventArgs e)
+    {
+        if (e.Code == "Enter" || e.Code == "NumpadEnter")
+        {
+            FilteredArtists = GetFilterredArtists();
+        }
+        
+    }
+
+   
 
     // public async Task<List<Album>> GetAlbumsForArtist(int artistId)
     // {
