--- a/Chinook/Pages/Home.razor
+++ b/Chinook/Pages/Home.razor
@@ -37,12 +37,11 @@ else
 }
 
 @code {
+    [Inject] IArtistService ArtistService { get; set; }
+
     private List<ArtistDto> Artists;
     private List<ArtistDto> FilteredArtists;
-    // [Inject] IDbContextFactory<ChinookContext> DbFactory { get; set; }
-    [Inject] IArtistService artistService { get; set; }
-
-    public string SearchText = String.Empty;
+    private string SearchText = String.Empty;
 
     protected override async Task OnInitializedAsync() {
         await InvokeAsync(StateHasChanged);
@@ -52,12 +51,7 @@ else
 
     public async Task<List<ArtistDto>> GetArtists()
     {
-        //  var dbContext = await DbFactory.CreateDbContextAsync();
-        // // var users = dbContext.Users.Include(a => a.UserPlaylists).ToList();
-
-        //  return dbContext.Artists.ToList();
-
-        return await artistService.GetAllArtists();
+        return await ArtistService.GetAllArtists();
     }
 
     public List<ArtistDto> GetFilterredArtists()
@@ -77,12 +71,4 @@ else
         }
         
     }
-
-   
-
-    // public async Task<List<Album>> GetAlbumsForArtist(int artistId)
-    // {
-    //     var dbContext = await DbFactory.CreateDbContextAsync();
-    //     return dbContext.Albums.Where(a => a.ArtistId == artistId).ToList();
-    // }
 }
