Add tracks to the favorite list

--- a/Chinook/Pages/ArtistPage.razor
+++ b/Chinook/Pages/ArtistPage.razor
@@ -42,7 +42,7 @@ else
                     <td>
                         @if (track.IsFavorite)
                         {
-                            <a href="#" class="m-1" title="Unmark as favorite" @onclick="@(() => UnfavoriteTrack(track.TrackId))" @onclick:preventDefault><i class="bi bi-star-filled"></i></a>
+                            <a href="#" class="m-1" title="Unmark as favorite" @onclick="@(() => UnfavoriteTrack(track.TrackId))" @onclick:preventDefault><i class="bi bi-star-fill"></i></a>
                         }
                         else
                         {
@@ -89,6 +89,7 @@ else
     [CascadingParameter] private Task<AuthenticationState> AuthenticationState { get; set; }
     [Inject] IArtistService ArtistService { get; set; }
     [Inject] IAlbumService AlbumService { get; set; }
+    [Inject] IPlaylistService PlaylistService { get; set; }
 
     private Modal PlaylistDialog { get; set; }
     private ArtistDto Artist;
@@ -115,13 +116,18 @@ else
         return userId;
     }
 
-    private void FavoriteTrack(long trackId)
+    private  async Task FavoriteTrack(long trackId)
     {
         var track = Tracks.FirstOrDefault(t => t.TrackId == trackId);
 
         // TODO: add track to Favorites playlist
-
-        InfoMessage = $"Track {track.ArtistName} - {track.AlbumTitle} - {track.TrackName} added to playlist Favorites.";
+        var result =  await PlaylistService.AddTrackToMyFavoritePlayList(trackId, CurrentUserId);
+        if (result.SuccessfullyAdded == true )
+        {
+            track!.IsFavorite = true; 
+            InfoMessage = $"Track {track.ArtistName} - {track.AlbumTitle} - {track.TrackName} added to playlist Favorites.";
+        }
+       
     }
 
     private void UnfavoriteTrack(long trackId)
