--- a/Chinook/Pages/Home.razor
+++ b/Chinook/Pages/Home.razor
@@ -14,7 +14,7 @@
 }
 else
 {
-    <div class="text-center bg-blue-100">
+    <div class="mb-2">
         <input @bind-value="SearchText" @bind-value:event="oninput" @onkeydown="OnSearch" placeholder="Type artist name and press Enter key to search" />
     </div>
     <table class="table table-striped table-hover table-sm">
