--- a/Chinook/Shared/NavMenu.razor
+++ b/Chinook/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using System.Security.Claims
+@attribute [Authorize]
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Chinook</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -14,24 +17,54 @@
                 <span class="oi oi-home" aria-hidden="true"></span>Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-@* 
-            <NavLink class="nav-link" href="playlist/playlistnumber">
-                <i class="bi bi-music-note-list me-3" style="font-size: 1.25em"></i>My favorite tracks
-            </NavLink>
-*@
-</div>
+
+        @foreach(var playlist in MyPlaylists)
+        {
+            string url = $"playlist/{playlist.PlaylistId}"; 
+            <div class="nav-item px-3">
+
+                <NavLink class="nav-link" href=@url>
+                    <i class="bi bi-music-note-list me-3" style="font-size: 1.25em"></i>@playlist.Name
+                </NavLink>
+
+            </div>
+        }
+        
 
     </nav>
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
+    [CascadingParameter] private Task<AuthenticationState> AuthenticationState { get; set; }
+    [Inject] IPlaylistService PlaylistService { get; set; }
 
+    private bool collapseNavMenu = true;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string CurrentUserId;
+    private List<MyPlaylistDto> MyPlaylists;
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private async Task<string> GetUserId()
+    {
+        var user = (await AuthenticationState).User;
+        var userId = user.FindFirst(u => u.Type.Contains(ClaimTypes.NameIdentifier))?.Value;
+        return userId;
+    }
+
+    private async Task<List<MyPlaylistDto>> GetMyPlayLists()
+    {
+        return await PlaylistService.GetMyPlayLists(CurrentUserId);
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await InvokeAsync(StateHasChanged);
+        CurrentUserId = await GetUserId();
+
+        MyPlaylists = await GetMyPlayLists(); 
     }
 }
