--- a/Chinook/Shared/NavMenu.razor
+++ b/Chinook/Shared/NavMenu.razor
@@ -20,17 +20,13 @@
 
         @foreach(var playlist in MyPlaylists)
         {
-            string url = $"playlist/{playlist.PlaylistId}"; 
+            string url = $"Playlist/{playlist.PlaylistId}"; 
             <div class="nav-item px-3">
-
                 <NavLink class="nav-link" href=@url>
                     <i class="bi bi-music-note-list me-3" style="font-size: 1.25em"></i>@playlist.Name
                 </NavLink>
-
             </div>
         }
-        
-
     </nav>
 </div>
 
