Add comments and updated the README files with modifications I have done

--- a/Chinook/Pages/PlaylistPage.razor
+++ b/Chinook/Pages/PlaylistPage.razor
@@ -103,7 +103,7 @@ else
     {
         var track = Playlist.Tracks.FirstOrDefault(t => t.TrackId == trackId);
 
-        var result = await PlaylistService.RemoveTrackFromPlaylist(PlaylistId, trackId, CurrentUserId);
+        var result = await PlaylistService.RemoveTrackFromPlaylist(PlaylistId, trackId);
         if (result.SuccessfullyAdded == true)
         {
             track!.IsFavorite = false;
